sumo/tests/duarouter/flows/errors/vehicle_empty_arrivallane/errors.duarouter
Error: Attribute 'arrivalLane' in definition of a flow is empty.
Error: The loader for flow-files from file 'input_flows.flows.xml' could not be initialised;
 Reason: Invalid arrivalLane definition for vehicle 0;
 must be one of ("current", or int>0).
Quitting (on error).
